// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./__tests__/giji/comment.marksvg snapshot 1`] = `
"<article>
<svg viewBox=\\"-10 40 1100 120\\" style=\\"max-width: 100%; width: 1100px;\\">
<marker id=\\"svg-marker-circle\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"5\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<circle cx=\\"5\\" cy=\\"5\\" r=\\"4\\">
</circle>
</marker>
<marker id=\\"svg-marker-arrow-start\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"3\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<path d=\\"M10,0 L0,5 L10,10 z\\" class=\\"fill\\">
</path>
</marker>
<marker id=\\"svg-marker-arrow-end\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"3\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<path d=\\"M0,0 L10,5 L0,10 z\\" class=\\"fill\\">
</path>
</marker>
<marker id=\\"svg-marker-cross\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"5\\" refY=\\"5\\" orient=\\"0\\" class=\\"edgePath\\">
<path d=\\"M0,0 L10,10 M0,10 L10,0 z\\" class=\\"path\\">
</path>
</marker>
<g>
<rect width=\\"100\\" height=\\"100\\" x=\\"0\\" y=\\"50\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"100\\" x=\\"140\\" y=\\"50\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"100\\" x=\\"280\\" y=\\"50\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"100\\" x=\\"420\\" y=\\"50\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect fill=\\"none\\" width=\\"530\\" height=\\"110\\" x=\\"-5\\" y=\\"45\\" rx=\\"10\\" ry=\\"10\\" class=\\"cluster\\">
</rect>
<rect width=\\"100\\" height=\\"100\\" x=\\"560\\" y=\\"50\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"100\\" x=\\"700\\" y=\\"50\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"100\\" x=\\"840\\" y=\\"50\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"100\\" x=\\"980\\" y=\\"50\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect fill=\\"none\\" width=\\"530\\" height=\\"110\\" x=\\"555\\" y=\\"45\\" rx=\\"10\\" ry=\\"10\\" class=\\"cluster\\">
</rect>
</g>
<g class=\\"edgePath\\">
<path fill=\\"none\\" d=\\"M525,100C575,100,505,100,555,100\\" class=\\"path wide\\">
</path>
<path fill=\\"none\\" d=\\"M525,100C575,100,-50,100,0,100\\" marker-start=\\"url(#svg-marker-circle)\\" marker-end=\\"url(#svg-marker-circle)\\" class=\\"path solid\\">
</path>
<rect rx=\\"10\\" ry=\\"10\\" class=\\"pen\\">
</rect>
<rect rx=\\"10\\" ry=\\"10\\" class=\\"pen\\">
</rect>
<rect rx=\\"10\\" ry=\\"10\\" class=\\"pen\\">
</rect>
<rect rx=\\"10\\" ry=\\"10\\" class=\\"pen\\">
</rect>
<rect rx=\\"10\\" ry=\\"10\\" class=\\"pen\\">
</rect>
<rect rx=\\"10\\" ry=\\"10\\" class=\\"pen\\">
</rect>
<rect rx=\\"10\\" ry=\\"10\\" class=\\"pen\\">
</rect>
<rect rx=\\"10\\" ry=\\"10\\" class=\\"pen\\">
</rect>
<rect rx=\\"10\\" ry=\\"10\\" class=\\"pen\\">
</rect>
<rect rx=\\"10\\" ry=\\"10\\" class=\\"pen\\">
</rect>
<rect rx=\\"10\\" ry=\\"10\\" class=\\"pen\\">
</rect>
<rect rx=\\"10\\" ry=\\"10\\" class=\\"pen\\">
</rect>
<text text-anchor=\\"middle\\" label=\\"aaa\\" x=\\"50\\" y=\\"145\\" class=\\"pen\\">aaa</text>
<text text-anchor=\\"middle\\" label=\\"bbb\\" x=\\"190\\" y=\\"145\\" class=\\"pen\\">bbb</text>
<text text-anchor=\\"middle\\" label=\\"ccc\\" x=\\"330\\" y=\\"145\\" class=\\"pen\\">ccc</text>
<text text-anchor=\\"middle\\" label=\\"ddd\\" x=\\"470\\" y=\\"145\\" class=\\"pen\\">ddd</text>
<text text-anchor=\\"end\\" label=\\"first\\" x=\\"525\\" y=\\"65\\" class=\\"pen\\">first</text>
<text text-anchor=\\"middle\\" label=\\"eee\\" x=\\"610\\" y=\\"145\\" class=\\"pen\\">eee</text>
<text text-anchor=\\"middle\\" label=\\"fff\\" x=\\"750\\" y=\\"145\\" class=\\"pen\\">fff</text>
<text text-anchor=\\"middle\\" label=\\"ggg\\" x=\\"890\\" y=\\"145\\" class=\\"pen\\">ggg</text>
<text text-anchor=\\"middle\\" label=\\"hhh\\" x=\\"1030\\" y=\\"145\\" class=\\"pen\\">hhh</text>
<text text-anchor=\\"end\\" label=\\"second\\" x=\\"1085\\" y=\\"65\\" class=\\"pen\\">second</text>
<text text-anchor=\\"middle\\" label=\\"main relation\\" x=\\"540\\" y=\\"100\\" class=\\"pen\\">main relation</text>
<text text-anchor=\\"middle\\" label=\\"sub relation\\" x=\\"262\\" y=\\"100\\" class=\\"pen\\">sub relation</text>
</g>
<!---->
</svg>
<!---->
</article>"
`;

exports[`./__tests__/giji/japanease.marksvg snapshot 1`] = `
"<article>
<svg viewBox=\\"0 0 100 100\\" style=\\"max-width: 100%; width: 100px;\\">
<marker id=\\"svg-marker-circle\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"5\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<circle cx=\\"5\\" cy=\\"5\\" r=\\"4\\">
</circle>
</marker>
<marker id=\\"svg-marker-arrow-start\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"3\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<path d=\\"M10,0 L0,5 L10,10 z\\" class=\\"fill\\">
</path>
</marker>
<marker id=\\"svg-marker-arrow-end\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"3\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<path d=\\"M0,0 L10,5 L0,10 z\\" class=\\"fill\\">
</path>
</marker>
<marker id=\\"svg-marker-cross\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"5\\" refY=\\"5\\" orient=\\"0\\" class=\\"edgePath\\">
<path d=\\"M0,0 L10,10 M0,10 L10,0 z\\" class=\\"path\\">
</path>
</marker>
<g>
</g>
<g class=\\"edgePath\\">
</g>
<!---->
</svg>
<div class=\\"errors\\">
<div class=\\"error\\">## ほのぼのぐみ
 解釈できない文字列です。</div>
<div class=\\"error\\">&lt;100,100&gt;参休 &lt;200,100&gt;ミツボシ &lt;300,100&gt;ネイサン  &lt;400,100&gt;サイラス &lt;200,200&gt;はのん ペラジー
 解釈できない文字列です。</div>
<div class=\\"error\\">## がちがちぐみ
 解釈できない文字列です。</div>
<div class=\\"error\\">&lt;100,200&gt;皇帝  &lt;100,200&gt;はおう  &lt;300,200&gt;かみさま
 解釈できない文字列です。</div>
<div class=\\"error\\"> ほのぼのぐみx-v&lt;-xがちがちぐみ 要素が未定義です。</div>
<div class=\\"error\\"> はのん..参休 要素が未定義です。</div>
<div class=\\"error\\"> 参休..ミツボシ 要素が未定義です。</div>
<div class=\\"error\\"> ネイサン==皇帝 要素が未定義です。</div>
<div class=\\"error\\"> 皇帝x==xはおう 要素が未定義です。</div>
<div class=\\"error\\"> サイラス--x皇帝 要素が未定義です。</div>
<div class=\\"error\\"> ペラジー--xかみさま 要素が未定義です。</div>
<div class=\\"error\\"> かみさま&lt;==&gt;皇帝 要素が未定義です。</div>
<div class=\\"error\\"> かみさまo==o参休 要素が未定義です。</div>
</div>
</article>"
`;

exports[`./__tests__/giji/node_only.marksvg snapshot 1`] = `
"<article>
<svg viewBox=\\"-5 45 1090 110\\" style=\\"max-width: 100%; width: 1090px;\\">
<marker id=\\"svg-marker-circle\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"5\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<circle cx=\\"5\\" cy=\\"5\\" r=\\"4\\">
</circle>
</marker>
<marker id=\\"svg-marker-arrow-start\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"3\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<path d=\\"M10,0 L0,5 L10,10 z\\" class=\\"fill\\">
</path>
</marker>
<marker id=\\"svg-marker-arrow-end\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"3\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<path d=\\"M0,0 L10,5 L0,10 z\\" class=\\"fill\\">
</path>
</marker>
<marker id=\\"svg-marker-cross\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"5\\" refY=\\"5\\" orient=\\"0\\" class=\\"edgePath\\">
<path d=\\"M0,0 L10,10 M0,10 L10,0 z\\" class=\\"path\\">
</path>
</marker>
<g>
<rect width=\\"100\\" height=\\"100\\" x=\\"0\\" y=\\"50\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"100\\" x=\\"140\\" y=\\"50\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"100\\" x=\\"280\\" y=\\"50\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"100\\" x=\\"420\\" y=\\"50\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"100\\" x=\\"560\\" y=\\"50\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"100\\" x=\\"700\\" y=\\"50\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"100\\" x=\\"840\\" y=\\"50\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"100\\" x=\\"980\\" y=\\"50\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
</g>
<g class=\\"edgePath\\">
<rect rx=\\"10\\" ry=\\"10\\" class=\\"pen\\">
</rect>
<rect rx=\\"10\\" ry=\\"10\\" class=\\"pen\\">
</rect>
<rect rx=\\"10\\" ry=\\"10\\" class=\\"pen\\">
</rect>
<rect rx=\\"10\\" ry=\\"10\\" class=\\"pen\\">
</rect>
<rect rx=\\"10\\" ry=\\"10\\" class=\\"pen\\">
</rect>
<rect rx=\\"10\\" ry=\\"10\\" class=\\"pen\\">
</rect>
<rect rx=\\"10\\" ry=\\"10\\" class=\\"pen\\">
</rect>
<rect rx=\\"10\\" ry=\\"10\\" class=\\"pen\\">
</rect>
<text text-anchor=\\"middle\\" label=\\"aaa\\" x=\\"50\\" y=\\"145\\" class=\\"pen\\">aaa</text>
<text text-anchor=\\"middle\\" label=\\"bbb\\" x=\\"190\\" y=\\"145\\" class=\\"pen\\">bbb</text>
<text text-anchor=\\"middle\\" label=\\"ccc\\" x=\\"330\\" y=\\"145\\" class=\\"pen\\">ccc</text>
<text text-anchor=\\"middle\\" label=\\"ddd\\" x=\\"470\\" y=\\"145\\" class=\\"pen\\">ddd</text>
<text text-anchor=\\"middle\\" label=\\"eee\\" x=\\"610\\" y=\\"145\\" class=\\"pen\\">eee</text>
<text text-anchor=\\"middle\\" label=\\"fff\\" x=\\"750\\" y=\\"145\\" class=\\"pen\\">fff</text>
<text text-anchor=\\"middle\\" label=\\"ggg\\" x=\\"890\\" y=\\"145\\" class=\\"pen\\">ggg</text>
<text text-anchor=\\"middle\\" label=\\"hhh\\" x=\\"1030\\" y=\\"145\\" class=\\"pen\\">hhh</text>
</g>
<!---->
</svg>
<!---->
</article>"
`;

exports[`./__tests__/giji/relation.marksvg snapshot 1`] = `
"<article>
<svg viewBox=\\"-10 40 1100 120\\" style=\\"max-width: 100%; width: 1100px;\\">
<marker id=\\"svg-marker-circle\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"5\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<circle cx=\\"5\\" cy=\\"5\\" r=\\"4\\">
</circle>
</marker>
<marker id=\\"svg-marker-arrow-start\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"3\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<path d=\\"M10,0 L0,5 L10,10 z\\" class=\\"fill\\">
</path>
</marker>
<marker id=\\"svg-marker-arrow-end\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"3\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<path d=\\"M0,0 L10,5 L0,10 z\\" class=\\"fill\\">
</path>
</marker>
<marker id=\\"svg-marker-cross\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"5\\" refY=\\"5\\" orient=\\"0\\" class=\\"edgePath\\">
<path d=\\"M0,0 L10,10 M0,10 L10,0 z\\" class=\\"path\\">
</path>
</marker>
<g>
<rect width=\\"100\\" height=\\"100\\" x=\\"0\\" y=\\"50\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"100\\" x=\\"140\\" y=\\"50\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"100\\" x=\\"280\\" y=\\"50\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"100\\" x=\\"420\\" y=\\"50\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect fill=\\"none\\" width=\\"530\\" height=\\"110\\" x=\\"-5\\" y=\\"45\\" rx=\\"10\\" ry=\\"10\\" class=\\"cluster\\">
</rect>
<rect width=\\"100\\" height=\\"100\\" x=\\"560\\" y=\\"50\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"100\\" x=\\"700\\" y=\\"50\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"100\\" x=\\"840\\" y=\\"50\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"100\\" x=\\"980\\" y=\\"50\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect fill=\\"none\\" width=\\"530\\" height=\\"110\\" x=\\"555\\" y=\\"45\\" rx=\\"10\\" ry=\\"10\\" class=\\"cluster\\">
</rect>
</g>
<g class=\\"edgePath\\">
<path fill=\\"none\\" d=\\"M50,50C50,0,190,0,190,50\\" marker-end=\\"url(#svg-marker-arrow-end)\\" class=\\"path solid\\">
</path>
<path fill=\\"none\\" d=\\"M190,50C190,0,330,0,330,50\\" marker-end=\\"url(#svg-marker-arrow-end)\\" class=\\"path solid\\">
</path>
<path fill=\\"none\\" d=\\"M330,50C330,0,470,0,470,50\\" marker-end=\\"url(#svg-marker-circle)\\" class=\\"path solid\\">
</path>
<path fill=\\"none\\" d=\\"M470,150C470,200,610,200,610,150\\" marker-end=\\"url(#svg-marker-cross)\\" class=\\"path solid\\">
</path>
<path fill=\\"none\\" d=\\"M610,150C610,200,750,200,750,150\\" marker-end=\\"url(#svg-marker-cross)\\" class=\\"path solid\\">
</path>
<path fill=\\"none\\" d=\\"M800,100C850,100,-50,100,0,100\\" class=\\"path solid\\">
</path>
<path fill=\\"none\\" d=\\"M525,100C575,100,505,100,555,100\\" class=\\"path solid\\">
</path>
<path fill=\\"none\\" d=\\"M525,100C575,100,-50,100,0,100\\" class=\\"path solid\\">
</path>
<rect rx=\\"10\\" ry=\\"10\\" class=\\"pen\\">
</rect>
<rect rx=\\"10\\" ry=\\"10\\" class=\\"pen\\">
</rect>
<rect rx=\\"10\\" ry=\\"10\\" class=\\"pen\\">
</rect>
<rect rx=\\"10\\" ry=\\"10\\" class=\\"pen\\">
</rect>
<rect rx=\\"10\\" ry=\\"10\\" class=\\"pen\\">
</rect>
<rect rx=\\"10\\" ry=\\"10\\" class=\\"pen\\">
</rect>
<rect rx=\\"10\\" ry=\\"10\\" class=\\"pen\\">
</rect>
<rect rx=\\"10\\" ry=\\"10\\" class=\\"pen\\">
</rect>
<rect rx=\\"10\\" ry=\\"10\\" class=\\"pen\\">
</rect>
<rect rx=\\"10\\" ry=\\"10\\" class=\\"pen\\">
</rect>
<text text-anchor=\\"middle\\" label=\\"aaa\\" x=\\"50\\" y=\\"145\\" class=\\"pen\\">aaa</text>
<text text-anchor=\\"middle\\" label=\\"bbb\\" x=\\"190\\" y=\\"145\\" class=\\"pen\\">bbb</text>
<text text-anchor=\\"middle\\" label=\\"ccc\\" x=\\"330\\" y=\\"145\\" class=\\"pen\\">ccc</text>
<text text-anchor=\\"middle\\" label=\\"ddd\\" x=\\"470\\" y=\\"145\\" class=\\"pen\\">ddd</text>
<text text-anchor=\\"end\\" label=\\"first\\" x=\\"525\\" y=\\"65\\" class=\\"pen\\">first</text>
<text text-anchor=\\"middle\\" label=\\"eee\\" x=\\"610\\" y=\\"145\\" class=\\"pen\\">eee</text>
<text text-anchor=\\"middle\\" label=\\"fff\\" x=\\"750\\" y=\\"145\\" class=\\"pen\\">fff</text>
<text text-anchor=\\"middle\\" label=\\"ggg\\" x=\\"890\\" y=\\"145\\" class=\\"pen\\">ggg</text>
<text text-anchor=\\"middle\\" label=\\"hhh\\" x=\\"1030\\" y=\\"145\\" class=\\"pen\\">hhh</text>
<text text-anchor=\\"end\\" label=\\"second\\" x=\\"1085\\" y=\\"65\\" class=\\"pen\\">second</text>
</g>
<!---->
</svg>
<!---->
</article>"
`;

exports[`./__tests__/giji/relation_only.marksvg snapshot 1`] = `
"<article>
<svg viewBox=\\"0 0 100 100\\" style=\\"max-width: 100%; width: 100px;\\">
<marker id=\\"svg-marker-circle\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"5\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<circle cx=\\"5\\" cy=\\"5\\" r=\\"4\\">
</circle>
</marker>
<marker id=\\"svg-marker-arrow-start\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"3\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<path d=\\"M10,0 L0,5 L10,10 z\\" class=\\"fill\\">
</path>
</marker>
<marker id=\\"svg-marker-arrow-end\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"3\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<path d=\\"M0,0 L10,5 L0,10 z\\" class=\\"fill\\">
</path>
</marker>
<marker id=\\"svg-marker-cross\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"5\\" refY=\\"5\\" orient=\\"0\\" class=\\"edgePath\\">
<path d=\\"M0,0 L10,10 M0,10 L10,0 z\\" class=\\"path\\">
</path>
</marker>
<g>
</g>
<g class=\\"edgePath\\">
</g>
<!---->
</svg>
<div class=\\"errors\\">
<div class=\\"error\\"> aaa--&gt;bbb 要素が未定義です。</div>
<div class=\\"error\\"> bbb--&gt;ccc 要素が未定義です。</div>
<div class=\\"error\\"> ccc--oddd 要素が未定義です。</div>
<div class=\\"error\\"> ddd--xeee 要素が未定義です。</div>
<div class=\\"error\\"> eee--Xfff 要素が未定義です。</div>
<div class=\\"error\\"> fff--aaa 要素が未定義です。</div>
</div>
</article>"
`;
